--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,56 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.container {
+  height: 100vh;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+iframe {
+  box-shadow: 0 0 100px black;
+  border: 1px solid black;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+button {
+  transform: rotate(-2deg);
+  border: 0 solid #E5E7EB;
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  width: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.button-droite {
+  background-color: rgba(61, 209, 231, 0.75);
+  transform: rotate(-2deg);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.button-gauche {
+  background-color: rgba(205, 61, 231, 0.75);
+  transform: rotate(2deg);
+}
+
+button:focus {
+  outline: 0;
+}
+
+button:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+button:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+
+@media (min-width: 768px) {
+  button {
+    padding: .75rem 3rem;
+    font-size: 1.25rem;
   }
 }
